# annotate-studio

./: .gitignore  README.md  flake.nix  next.config.ts  package-lock.json  package.json
app/: layout.tsx  page.tsx
components/: Dock.tsx  Inspector.tsx  ThemeProvider.tsx  Viewer.tsx
components/ui/: dialog.tsx  menubar.tsx  popover.tsx
lib/: store.ts
src/: package-lock.json  package.json  wasm-renderer.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/libs/pdfium/: README.md
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Dock.tsx  Header.tsx  Inspector.tsx  Sidebar.tsx  ThemeToggle.tsx  Viewer.tsx
src/hooks/: useThemeToggle.tsx
src/lib/: performance.ts  store.ts  tauri.ts  useWasmEngine.ts  wasm-engine.ts
src/wasm-renderer/: Cargo.toml  build.ps1  build.sh
src/wasm-renderer/src/: lib.rs
